# franka_ros

franka_common/: CMakeLists.txt  package.xml
franka_common/launch/: franka_moveit.launch
franka_control/config/: default_controllers.yaml
franka_control/launch/: franka_control.launch
franka_description/launch/: load_URDF.launch  load_panda_arm.launch  test_arm_hand_model.launch  test_arm_model.launch  test_hand_model.launch
franka_description/robots/: arm_table.xacro  materials.xacro  panda_arm.urdf.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand_macro.xacro  panda_arm_on_table.urdf.xacro
franka_description/robots/arm_base/: arm_base.gazebo.xacro  arm_base.xacro
franka_description/rviz/: visualize_arm.rviz  visualize_hand.rviz  visualize_hand_arm.rviz
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/launch/: gazebo.launch
franka_moveit_config/: package.xml
franka_moveit_config/config/: panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  panda_controllers.yaml
franka_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_chomp.launch  move_group.launch  moveit_rviz.launch  panda_control_moveit_rviz.launch  panda_gripper_moveit_controller_manager.launch.xml  panda_moveit.launch  panda_moveit_controller_manager.launch.xml  planning_context.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
franka_world/: CMakeLists.txt  package.xml
franka_world/launch/: world_description_upload.launch
franka_world/urdf/: world_main.urdf.xacro
(+21 files in other folders)
