<?xml version="1.0"?>
<package format="2">
  <name>franka_common</name>
  <version>0.7.0</version>
  <description>franka_description contains URDF files and meshes of Franka Emika robots</description>
  <maintainer email="valerio.magnago@fraunhofer.it">Valerio Magnago</maintainer>
  <license>Apache 2.0</license>
  
  <author>Valerio Magnago</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>franka_moveit_config</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>franka_control</exec_depend>

</package>
