<?xml version="1.0"?>
<package format="2">
  <name>franka_gazebo</name>
  <version>0.1.0</version>
  <description>This package configures the Franka simulation in Gazebo</description>

  <maintainer email="valerio.magnago@fraunhofer.it">Valerio Magnago</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
